// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookContainer should match the snapshot 1`] = `
<section>
  <h2
    className="book-title-header"
  >
     New York Times Best Sellers
  </h2>
  <div
    className="book-wrapper"
  >
    <Connect(Book)
      key="W3y3Ic3bz"
      title="Golden"
    />
    <Connect(Book)
      key="9NgWEukIq0"
      title="Xavier"
    />
  </div>
</section>
`;

exports[`BookContainer should match the snapshot when there is an error message 1`] = `
<section>
  <h2
    className="book-title-header"
  >
     New York Times Best Sellers
  </h2>
  <div
    className="book-wrapper"
  >
    <div>
      <h2>
        something went wrong
      </h2>
      <Link
        to="/Options"
      >
        Back
      </Link>
    </div>
    <Loading />
  </div>
</section>
`;

exports[`BookContainer should render loading when allsports.length === 0, error message != empty string  1`] = `
<section>
  <h2
    className="book-title-header"
  >
     New York Times Best Sellers
  </h2>
  <div
    className="book-wrapper"
  >
    <Loading />
  </div>
</section>
`;
